examples/napi/tests/build_error_tests/promise_raw_callback_lifetime_finally.rs
use napi::bindgen_prelude::PromiseRaw;

fn retain_borrowed_callback<'a>(promise: &mut PromiseRaw<'_, ()>, borrowed: &'a str) {
  let _ = promise.finally(move |_| Ok(borrowed.len() as u32));
}

fn main() {}
